--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -9,6 +9,6 @@
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <div style="background-color: orange; font-size: 18px;"><button>Inline Method</button></div>
+    <div style="color: orange; font-size: 18px;"><button>Inline Method</button></div>
   </body>
 </html>
