--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -17,6 +17,6 @@
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <div style="color: orange; font-size: 98px;"><button>Inline Method</button></div>
+    <button style="color: orange; font-size: 98px;">Inline Method</button>
   </body>
 </html>
